# tabular-ai-analyst

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  fly.toml
.github/workflows/: ci.yml
api/: Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 20260601_0001_initial_schema.py  20260601_0002_demo_quota_events.py  20260602_0003_owner_scoping.py
api/src/tabular_analyst/: main.py
api/src/tabular_analyst/adapters/: llm.py
api/src/tabular_analyst/api/: analyses.py  datasets.py  evals.py  health.py
api/src/tabular_analyst/core/: config.py  db.py  migrations.py  security.py
api/src/tabular_analyst/domain/: models.py  schemas.py
api/src/tabular_analyst/services/: analysis.py  charts.py  evaluation.py  files.py  profiling.py  sql_safety.py  transforms.py  value_search.py
api/src/tabular_analyst_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: architecture.md  benchmark-report.md  deployment.md  project-audit.md
evals/datasets/: governed_analyst_eval.jsonl  video_games_semantic_eval.jsonl
samples/: README.md  owid_co2_subset.csv  video_games_subset.csv  wine_quality_subset.csv
scripts/: run_benchmark.py  smoke_docker.sh  smoke_openai_planner.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_charts.py  test_openai_tools.py  test_profiling.py  test_security.py  test_sql_safety.py  (+2 more)
ui/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts
(+4 files in other folders)
