[project]
name = "tabular-analyst-api"
version = "0.1.0"
description = "Governed AI analyst copilot for tabular datasets"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13",
  "duckdb>=1.1",
  "fastapi>=0.115",
  "numpy>=2.0",
  "openai>=1.90",
  "openpyxl>=3.1",
  "pandas>=2.2",
  "plotly>=5.24",
  "psycopg[binary]>=3.2",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0",
  "sqlglot>=25.0",
  "uvicorn[standard]>=0.30"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.8"
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "E501"]
